[project]
name = "streamkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Koehl",email = "avkoehl@ucdavis.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba (>=0.62.1,<0.63.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipython = "^9.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
