[project]
name = "streamkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Koehl",email = "avkoehl@ucdavis.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numba (>=0.62.1,<0.63.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pysheds (>=0.5,<0.6)",
    "rioxarray (>=0.19.0,<0.20.0)",
    "pygeohydro (>=0.19.4,<0.20.0)",
    "pynhd (>=0.19.4,<0.20.0)",
    "py3dep (>=0.19.0,<0.20.0)",
    "whitebox (>=2.3.6,<3.0.0)",
    "shapelysmooth (>=0.2.1,<0.3.0)",
    "ruptures (>=1.1.10,<2.0.0)",
    "mkdocs-cluster (>=0.0.9,<0.0.10)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipython = "^9.6.0"
matplotlib = "^3.10.7"
mkdocs = "^1.6.1"
mkdocstrings = "^0.30.1"
mkdocs-material = "^9.6.22"
mkdocstrings-python = "^1.18.2"
mkdocs-jupyter = "^0.25.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
